Hide overflow on table to prevent horizontal scrollbar from being displayed when viewing by user.

--- a/server/static/wrstat/src/usageTable.css
+++ b/server/static/wrstat/src/usageTable.css
@@ -2,6 +2,7 @@
 	table-layout: fixed;
 	width: calc(100% - 2em);
 	margin: 4em 1em 1em 1em;
+	overflow: hidden;
 }
 
 #usageTable tbody {
